--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="page-table">
             <div class="table-cell text-center">
                 <div class="avatar-hero">
-                    <img src="img/hammed-olalekan-osanyinpeju.jpg" alt="avatar-hero">
+                    <img src="img/hammed-olalekan-osanyinpeju.jpg" alt="Hammed Olalekan Osanyinpeju">
                 </div>
                 <h1>Hammed Olalekan Osanyinpeju</h1>
                 <h2 class="typer-title">Software programmer, mobile and web app developer, System administration, DevOps, and Graduate Chemical Engineer.</h2>
