--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <h2>Hi There! I'm Hammed Olalekan Osanyinpeju</h2>
                         <p>I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible. 
                             <br/> <br/>
-                        I don't have preference when it comes to programming language, I go for best fit for the job. Php and javascript has always been the programming language i am fortunate to have work with the most. I am a fast learner, good listener, proactive leader and ever ready to learn for no one is born a professional. </p>
+                        I don't have preference when it comes to programming language, I go for best fit for the job, even if it warrant learning new programming language. Php and javascript has always been the programming language i am fortunate to have work with the most. I am a fast learner, good listener, proactive leader and ever ready to learn for no one is born a professional. </p>
 
 
                         <div class="row">
@@ -175,7 +175,7 @@
                         <div class="service-content">
                             <h3>WEBSITE DESIGN</h3>
                             <div class="s-line"></div>
-                            <p>HTML5, CSS3, JavaScript, Sass, JQuery, Bootstrap, js libraries, Vue js, React js, Blogger, WordPress, Wix, and Joomla</p>
+                            <p>HTML5, CSS3, JavaScript, Sass, JQuery, Bootstrap, js libraries, React js, Blogger, WordPress, Wix, and Joomla</p>
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                         <div class="service-content">
                             <h3>WEB DEVELOPMENT</h3>
                             <div class="s-line"></div>
-                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, Flask, Ajax, JSON, XML, Asterisk, REST API, SOAP, Linux, Nginx, Apache, DevOps, and Node js.</p>
+                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, Flask, Ajax, JSON, XML, Asterisk, REST API, SOAP, Linux, Nginx, Apache, and Node js.</p>
                         </div>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                         <div class="service-content">
                             <h3>DEVOPS</h3>
                             <div class="s-line"></div>
-                            <p>Code versioning, Continous Integration and Continous Development, Unit testing and Integration testing, Software testing and Debugging.</p>
+                            <p>Code versioning, docker, VPN, server configuration, Sytstem automation, Continous Integration and Continous Development, Unit testing and Integration testing, Software testing and Debugging. </p>
                         </div>
                     </div>
                 </div>
