--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <div class="service-content">
                             <h3>DEVOPS</h3>
                             <div class="s-line"></div>
-                            <p>Code versioning, docker, VPN, server configuration, Sytstem automation, Continous Integration and Continous Development, Unit testing and Integration testing, Software testing and Debugging. </p>
+                            <p>Git, Docker, VPN, Server configuration, Sytstem automation, Continous Integration and Continous Development, Code Versioning, Unit testing and Integration testing, Software testing and Debugging. </p>
                         </div>
                     </div>
                 </div>
