Update Index, js 15-08-2019

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <!-- SITE TITLE -->
     <title>Hammed Olalekan Osanyinpeju</title>
 
-    <meta name="keyword" content="Hammed, Olalekan, Osanyinpeju, software, Engineer, App, web, php, JavaScript, React, HTML5, CSS3, DevOps, administration, system">
+    <meta name="keyword" content="Hammed, Olalekan, Osanyinpeju, software, Engineer, Frontend, Backend, Fullstack, App, web, php, JavaScript, React, HTML5, CSS3, DevOps, administration, system">
 
-    <meta name="description" content="Software programmer, mobile and web app developer, System administration, DevOps and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
+    <meta name="description" content="Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
 
     <meta property="og:type" content="website">
 
     <meta property="og:title" content="Hammed Olalekan Osanyinpeju">
 
-    <meta property="og:image" content="img/hammed-olalekan-osanyinpeju72x72.png">
+    <meta property="og:image" content="img/hammed-olalekan-osanyinpeju114x114.png">
 
-    <meta property="og:description" content="Software programmer, mobile and web app developer, System administration, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
+    <meta property="og:description" content="Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
 
     <meta name="author" content="Hammed Olalekan Osanyinpeju">
@@ -107,7 +107,7 @@
                     <img src="img/hammed-olalekan-osanyinpeju.jpg" alt="Hammed Olalekan Osanyinpeju">
                 </div>
                 <h1>Hammed Olalekan Osanyinpeju</h1>
-                <h2 class="typer-title">Software programmer, mobile and web app developer, System administration, DevOps, and Graduate Chemical Engineer.</h2>
+                <h2 class="typer-title">Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer.</h2>
                 <a href="#about" class="scroll home-s-btn hor-center"><span class="dot center"></span></a>
             </div>
         </div>
