--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <!-- SITE TITLE -->
     <title>Hammed Olalekan Osanyinpeju</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 
     <meta name="keyword" content="Hammed, Olalekan, Osanyinpeju, software, Engineer, Frontend, Backend, Fullstack, App, web, php, JavaScript, React, HTML5, CSS3, DevOps, administration, system">
 
@@ -36,9 +40,6 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
-
-	<!-- Favicon -->
-	<link rel="icon" href="img/favicon.png">
 
 	<!-- Touch Icons - iOS and Android 2.1+ -->
  	<link rel="apple-touch-icon" href="img/favicon.png">
