Update Index, favicon  15-08-2019 v2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- SITE TITLE -->
     <title>Hammed Olalekan Osanyinpeju</title>
-    
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
@@ -22,7 +22,7 @@
 
     <meta property="og:title" content="Hammed Olalekan Osanyinpeju">
 
-    <meta property="og:image" content="img/hammed-olalekan-osanyinpeju114x114.png">
+    <meta property="og:image" content="img/favicon.png">
 
     <meta property="og:description" content="Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
