--- a/index.html
+++ b/index.html
@@ -6,12 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
+
+
+
+    <!-- Mobile friendliness -->
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+
     <!-- SITE TITLE -->
     <title>Hammed Olalekan Osanyinpeju</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/favicon.ico">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <meta name="keyword" content="Hammed, Olalekan, Osanyinpeju, software, Engineer, Frontend, Backend, Fullstack, App, web, php, JavaScript, React, HTML5, CSS3, DevOps, administration, system">
 
@@ -21,8 +44,6 @@
     <meta property="og:type" content="website">
 
     <meta property="og:title" content="Hammed Olalekan Osanyinpeju">
-
-    <meta property="og:image" content="img/favicon.png">
 
     <meta property="og:description" content="Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
@@ -41,12 +62,6 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
 
-	<!-- Touch Icons - iOS and Android 2.1+ -->
- 	<link rel="apple-touch-icon" href="img/favicon.png">
-
-	<link rel="apple-touch-icon" sizes="72x72" href="img/hammed-olalekan-osanyinpeju72x72.png">
-	
-    <link rel="apple-touch-icon" sizes="114x114" href="img/hammed-olalekan-osanyinpeju114x114.png">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
