--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-
-
-
     <!-- Mobile friendliness -->
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -18,7 +15,6 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/img/favicon.ico">
-    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
 
     <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
@@ -43,21 +39,17 @@
     <meta name="description" content="Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
 
-   <meta name="twitter:image:src" content="https://successtar.github.io/img/hammed-olalekan-osanyinpeju.jpg" />
+   <meta name="twitter:image:src" content="img/hammed-olalekan-osanyinpeju.jpg" />
    <meta name="twitter:site" content="@realsuccesstar" />
    <meta name="twitter:card" content="summary" />
    <meta name="twitter:title" content="Hammed Olalekan Osanyinpeju" />
    <meta name="twitter:description" content="Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible." />
 
-    <meta property="og:image" content="https://successtar.github.io/img/hammed-olalekan-osanyinpeju.jpg" />
+    <meta property="og:image" content="img/hammed-olalekan-osanyinpeju.jpg" />
     <meta property="og:url" content="https://successtar.github.io" />
-
-
     <meta property="og:type" content="website">
-
     <meta property="og:title" content="Hammed Olalekan Osanyinpeju">
-
-    <meta property="og:description" content="Software programmer,x Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
+    <meta property="og:description" content="Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
 
     <meta name="author" content="Hammed Olalekan Osanyinpeju">
