--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="service-content">
                             <h3>WEB DEVELOPMENT</h3>
                             <div class="s-line"></div>
-                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, Flask, Ajax, JSON, XML, Asterisk, REST API, SOAP, Linux, Nginx, Apache, and Node js.</p>
+                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, Ajax, JSON, XML, Asterisk, REST API, SOAP, Nginx, Apache, and Node js.</p>
                         </div>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                         <div class="service-content">
                             <h3>DEVOPS</h3>
                             <div class="s-line"></div>
-                            <p>Git, Docker, VPN, Server configuration, Sytstem automation, Continous Integration and Continous Development, Code Versioning, Unit testing and Integration testing, Software testing and Debugging. </p>
+                            <p>Linux, Git, Docker, VPN, Server configuration, Sytstem automation, Continous Integration and Continous Development, Code Versioning, Unit testing and Integration testing, Software testing and Debugging. </p>
                         </div>
                     </div>
                 </div>
