--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="service-content">
                             <h3>WEB DEVELOPMENT</h3>
                             <div class="s-line"></div>
-                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, Ajax, JSON, XML, Asterisk, REST API, SOAP, Nginx, Apache, and Node js.</p>
+                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, Slim, Ajax, JSON, XML, Asterisk, REST API, SOAP, Nginx, Apache, and Node js.</p>
                         </div>
                     </div>
                 </div>
