--- a/index.html
+++ b/index.html
@@ -486,8 +486,8 @@
                     </h5>
                     
                     <p>
-                        <a href="https://www.elementvilla.blogspot.com/" target="_blank" class="text-primary">
-                            https://www.elementvilla.blogspot.com/
+                        <a href="https://elementvilla.blogspot.com/" target="_blank" class="text-primary">
+                            https://elementvilla.blogspot.com/
                         </a> 
                     </p>
                   </div>
