Update Index page

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <h2>Hi There! I'm Hammed Olalekan Osanyinpeju</h2>
                         <p>I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible. 
                             <br/> <br/>
-                        I don't have preference when it comes to programming language, I go for best fit for the job, even if it warrant learning new programming language. Php and javascript has always been the programming language i am fortunate to have work with the most. I am a fast learner, good listener, proactive leader and ever ready to learn for no one is born a professional. </p>
+                        I don't have preference when it comes to programming language, I go for best fit for the job, even if it require learning new programming language. Php and javascript has always been the programming language i am fortunate to have work with the most. I am a fast learner, good listener, proactive leader and ever ready to learn for no one is born a professional. </p>
 
 
                         <div class="row">
