Update Index Page

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <div class="service-content">
                             <h3>APP DEVELOPMENT</h3>
                             <div class="s-line"></div>
-                            <p>Java-XML android app development and React Native</p>
+                            <p>Android App Development</p>
                         </div>
                     </div>
                 </div>
