Update Index Page

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <div class="service-content">
                             <h3>SOFTWARE PROGRAMMING</h3>
                             <div class="s-line"></div>
-                            <p>Java, Visual basic and Python.</p>
+                            <p>Java and Visual basic.</p>
                         </div>
                     </div>
                 </div>
