Update Index Page

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         <div class="service-content">
                             <h3>DEVOPS</h3>
                             <div class="s-line"></div>
-                            <p>Linux, Git, Docker, VPN, Server configuration, Sytstem automation, Continous Integration and Continous Delivery, Code Versioning, Unit testing and Integration testing, Software testing and Debugging. </p>
+                            <p>Linux, Git, Docker, VPN, Server configuration, Sytstem automation, CI/CD, Code Versioning, Unit testing and Integration testing, Software testing and Debugging. </p>
                         </div>
                     </div>
                 </div>
