--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="" lang="en"><head>
+<html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -263,7 +263,7 @@
                         <div class="service-content">
                             <h3>DATABASE MANAGEMENT</h3>
                             <div class="s-line"></div>
-                            <p>MySQL, MongoDB, CouchDb, Redis and Microsoft Access.</p>
+                            <p>MySQL, MSSQL, MongoDB, CouchDb, and Redis.</p>
                         </div>
                     </div>
                 </div>
