--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <div class="service-content">
                             <h3>WEBSITE DESIGN</h3>
                             <div class="s-line"></div>
-                            <p>HTML5, CSS3, JavaScript, Sass, JQuery, Bootstrap, js libraries, React js, Blogger, WordPress, Wix, and Joomla</p>
+                            <p>HTML5, CSS3, JavaScript, Sass, JQuery, Bootstrap, React js, Blogger, and WordPress</p>
                         </div>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
                         <div class="service-content">
                             <h3>WEB DEVELOPMENT</h3>
                             <div class="s-line"></div>
-                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, Slim, Ajax, JSON, XML, Asterisk, REST API, SOAP, Nginx, Apache, and Node js.</p>
+                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, Ajax, JSON, XML, Asterisk, REST API, SOAP, Nginx, Apache, and Node js.</p>
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
                         <div class="service-content">
                             <h3>DATABASE MANAGEMENT</h3>
                             <div class="s-line"></div>
-                            <p>MySQL, MSSQL, MongoDB, CouchDb, and Redis.</p>
+                            <p>MySQL, MSSQL, MongoDB, PostgreSql, and Redis.</p>
                         </div>
                     </div>
                 </div>
