Update Index page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="keyword" content="Hammed, Olalekan, Osanyinpeju, software, Engineer, Frontend, Backend, Fullstack, App, web, php, JavaScript, React, HTML5, CSS3, DevOps, administration, system">
+    <meta name="keyword" content="Hammed, Olalekan, Osanyinpeju, software, Engineer, Frontend, Backend, Fullstack, App, web, php, JavaScript, React, Vue, HTML5, CSS3, DevOps, administration, system">
 
     <meta name="description" content="Software programmer, Fullstack developer, Mobile app developer, System administrator, DevOps, and Graduate Chemical Engineer. I am a passionate and enthusiast software programmer. My programming expertise cut across building desktop applications, mobile applications, web applications, system administration, networking and general software engineering. One of my major interest is building applications for all platforms which makes me open to learning as much programming language as possible.">
 
@@ -195,7 +195,7 @@
                         <div class="service-content">
                             <h3>WEBSITE DESIGN</h3>
                             <div class="s-line"></div>
-                            <p>HTML5, CSS3, JavaScript, Sass, JQuery, Bootstrap, React js, Blogger, and WordPress</p>
+                            <p>HTML5, CSS3, JavaScript, Sass, JQuery, Bootstrap, React js, Vue js, Blogger, and WordPress</p>
                         </div>
                     </div>
                 </div>
