--- a/index.html
+++ b/index.html
@@ -281,12 +281,16 @@
             </div>
 
             <div class="row">
+
               <div class="col-md-6">
                 <div class="thumbnail">
                   <div class="caption">
-                    <h5 class="">Basecamp <span class="badge" style="float: right;" >2019</span></h5>
+                    <h5>
+                        KLIPCHEK
+                        <span class="badge" style="float: right;" >2020</span>
+                    </h5>
                     
-                    <p><a href="https://basecamp.com.ng/" target="_blank" class="text-primary">https://basecamp.com.ng/</a> </p>
+                    <p><a href="https://cdn.zercomsystems.com" target="_blank" class="text-primary">https://cdn.zercomsystems.com</a> </p>
                   </div>
                 </div>
               </div>
@@ -294,12 +298,9 @@
               <div class="col-md-6">
                 <div class="thumbnail">
                   <div class="caption">
-                    <h5>
-                        Video Conferencing Platform 
-                        <span class="badge" style="float: right;" >2019</span>
-                    </h5>
+                    <h5 class="">Basecamp <span class="badge" style="float: right;" >2019</span></h5>
                     
-                    <p><a href="https://meet.hollatags.com" target="_blank" class="text-primary">https://meet.hollatags.com</a> </p>
+                    <p><a href="https://basecamp.com.ng/" target="_blank" class="text-primary">https://basecamp.com.ng/</a> </p>
                   </div>
                 </div>
               </div>
