--- a/index.html
+++ b/index.html
@@ -150,17 +150,17 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <ul>
-                                    <li><span><i class="fa fa-envelope"></i> Email : </span>osanyinpejuhammed35@gmail.com</li>
+                                    <li><span><i class="fa fa-envelope"></i> Email : </span> <br>osanyinpejuhammed35@gmail.com</li>
                                 </ul>
                             </div>
                             <div class="col-md-4">
                                 <ul>
-                                    <li><span><i class="fa fa-phone"></i> Phone : </span>+2347061855688</li>
+                                    <li><span><i class="fa fa-phone"></i> Phone : </span> <br>+2347061855688</li>
                                 </ul>
                             </div>
                             <div class="col-md-4">
                                 <ul>
-                                    <li><span><i class="fa fa-map-marker"></i> Location : </span>Lagos Island, Lagos Nigeria.</li>
+                                    <li><span><i class="fa fa-map-marker"></i> Location : </span><br>Lagos Island, Lagos Nigeria.</li>
                                 </ul>
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                         <div class="service-content">
                             <h3>WEB DEVELOPMENT</h3>
                             <div class="s-line"></div>
-                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, WordPress Plugin, Asterisk, REST API, SOAP, Flask and Node js.</p>
+                            <p>Vanilla PHP, Codeigniter, Laravel, Phalcon, WordPress Plugin, Asterisk, REST API, SOAP, Vertx, Flask and Node js.</p>
                         </div>
                     </div>
                 </div>
