Update Streamcomm url

--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
                     </h5>
                     
                     <p>
-                        <a href="https://play.google.com/store/apps/details?id=co.streamcomm.video.streamcomm" target="_blank" class="text-primary">
-                            https://play.google.....video.streamcomm
+                        <a href="https://apkpure.com/streamcomm/co.streamcomm.video.streamcomm" target="_blank" class="text-primary">
+                            https://apkpure.com.....video.streamcomm
                         </a> 
                     </p>
                   </div>
@@ -385,7 +385,7 @@
                         <span class="badge" style="float: right;" >2019</span>
                     </h5>
                     
-                    <p><a href="http://video.streamcomm.co" target="_blank" class="text-primary">http://video.streamcomm.co</a> </p>
+                    <p><a href="https://web.archive.org/web/20200419055101/http://video.streamcomm.co/" target="_blank" class="text-primary">http://video.streamcomm.co</a> </p>
                   </div>
                 </div>
               </div>
