Update status.hollatags.com url to archive url

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     </h5>
                     
                     <p>
-                        <a href="https://status.hollatags.com" target="_blank" class="text-primary">
+                        <a href="https://web.archive.org/web/20191217041829/https://status.hollatags.com/" target="_blank" class="text-primary">
                             https://status.hollatags.com
                         </a> 
                     </p>
